--- a/src/app/logo-and-materials/logo-and-materials.component.html
+++ b/src/app/logo-and-materials/logo-and-materials.component.html
@@ -1,9 +1,9 @@
 <section>
-    <img src='/assets/Group 1.png' alt='logo' class='logo'>
+    <img src='assets/Group 1.png' alt='logo' class='logo'>
     <h3>3D Models of</h3>
     <h2>Abstract Digital Art</h2>
     <p>Make your design look more attractive with 3D
         abstract geometric digital art.
     </p>
-    <img src='/assets/Abstraction.png' alt='art' class='art'>
+    <img src='assets/Abstraction.png' alt='art' class='art'>
 </section>
