create account font familey changed

--- a/src/app/login-form/login-form.component.scss
+++ b/src/app/login-form/login-form.component.scss
@@ -5,9 +5,9 @@ section{
     h1{
         position:relative;
         left:50%;
-        font-weight:900;
         top:13vh;
-        font-size:2rem;
+        font-size:1.8rem;
+        font-family: 'Merriweather Sans', sans-serif;
     }
     .federated-auth{
         //border:1px solid lightblue;
