--- a/src/app/login-form/login-form.component.scss
+++ b/src/app/login-form/login-form.component.scss
@@ -35,6 +35,14 @@ section{
             height:29px;
             width:464px;
         }
+        .required{
+            background-color:#fd2b273b;
+            font-family:sans-serif;
+            color:maroon;
+            padding:5px;
+            width:458px;
+            font-size:0.9em;
+        }
         button{
            background-color:rgba(139, 178, 178, 1);
            width:474px;
