fixed the submit button issue a

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <section>
   <app-logo-and-materials></app-logo-and-materials>
-  <app-login-form></app-login-form>
+  <app-create-account-form ></app-create-account-form>
 </section>
 <router-outlet></router-outlet>
