--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,6 +3,6 @@
     <form #loginForm ='ngForm'>
         <input type='email' name='email' placeholder ='Email' required>
         <input type='password' name='password' placeholder='password' required>
-        <button type='submit' (click) = 'login()' loginForm.reset()>submit</button>
+        <button type='submit' (click) = 'login()'>submit</button>
     </form>
 </section>
